--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "homepage": "https://github.com/redjeacs/template#readme",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
     "@eslint/js": "^9.32.0",
+    "babel-jest": "^30.1.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
